[build-system]
requires = [ "setuptools>=61.0" ]

build-backend = "setuptools.build_meta"

[project]
name = "pyeml"
version = "0.0.1"
authors = [
  { name="Daniel Suárez Labena", email="dsuarezl@ull.edu.es" },
]
description = "Tool to execute pieces of python code in kubernetes containers"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dsuarezl/Containerizer"
"Bug Tracker" = "https://github.com/dsuarezl/Containerizer"

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you do NOT need to include the following line.
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"pyeml.data" = ["*.so*"]